# rustfuck

./: .gitignore  Cargo.toml  assemble.sh  install.sh
programs/: LostKingdom.bf  e.bf  tic-tac-toe.bf
src/: main.rs
src/compiler/: mod.rs
src/front_end/: lexer.rs  parser.rs
src/helper/: flush_stdout.c
src/interpreter/: mod.rs
src/optimizer/: collapse_decrements.rs  collapse_increments.rs  collapse_next.rs  collapse_previous.rs  collapse_set_zero.rs  mod.rs  remove_comment_loop.rs
