[package]
name = "rustfuck"
version = "1.3.0"
authors = ["Meryll"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[profile.release]
debug = 0
lto = "fat"


[dependencies]
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm7-0"] }
clap = "3.0.0-beta.2"

